styles/globals.css
/* Todo: Add variables */
html,
body {
  padding: 0;
  margin: 0;
  font-family: Helvetica, sans-serif;
  line-height: 32px;
  font-size: 18px;
  letter-spacing: -0.33px;
  font-weight: 400;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

main {
  display: flex;
  padding-top: 5vh;
  flex-direction: column;
  max-width: 650px;
  width: 100%;
  padding: 0 12px;
  margin: auto;
  min-height: 80vh; /* Todo: Fix so not fixed */
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: white;
  color: black;
}

.dark {
  background: #121212 !important;
  color: white !important;
}

.dark svg {
  fill: white;
}

.icon {
  width: 20px;
}

.essay a {
  color: #3b82f6;
  padding-bottom: 2px;
  border-bottom: 1px solid #3b82f6;
}

.essay blockquote {
  margin: 0;
  padding-left: 15px;
  border-left: 5px solid #4d8b31;
  font-style: italic;
}

/* .essay a:hover {
  color: blue;
  padding-bottom: 2px;
  border-bottom: 1px solid blue;
} */

@media (min-width: 650px) {
  .container {
    align-items: center;
  }
}

